<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today, July 04</string>
    <string name="highDegree">21°</string>
    <string name="lowDegree">8°</string>
    <string name="cloudy">Cloudy</string>
    <string name="action_refresh">refresh</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!--Preferences Strings-->
    <string name="pref_location_label">Location</string>
    <string name="pref_Location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">3682274</string>
    <string-array name="pref_location_list_titles">
        <item>Mountain View</item>
        <item>Bogota</item>
        <item>Fusa</item>
        <item>None</item>
    </string-array>
    <string-array name="pref_location_list_values">
        <item>5375480</item>
        <item>3688689</item>
        <item>3682274</item>
        <item>0</item>
    </string-array>

    <string name="pref_metric_label">Metric</string>
    <string name="pref_metric_key" translatable="false">metric</string>
    <string name="pref_metric_default" translatable="false">1</string>
    <string name="action_loc_map">Location</string>
    <string-array name="pref_metric_list_titles">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string-array name="pref_metric_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>
